--- a/config/confd_env_backend/templates/env.tmpl
+++ b/config/confd_env_backend/templates/env.tmpl
@@ -9,6 +9,9 @@ DB_PORT={{getenv "DB_PORT"}}
 DB_USER={{getenv "DB_USER"}}
 DEBUG={{if ne (getenv "PRODUCTION_MODE") "true"}}true{{end}}
 DELTA_HOST={{getenv "DELTA_HOST"}}
+DEVICE_CONFIG_OPENVPN_CA={{getenv "DEVICE_CONFIG_OPENVPN_CA"}}
+DEVICE_CONFIG_OPENVPN_CONFIG={{getenv "DEVICE_CONFIG_OPENVPN_CONFIG"}}
+DEVICE_CONFIG_SSH_AUTHORIZED_KEYS={{getenv "DEVICE_CONFIG_SSH_AUTHORIZED_KEYS"}}
 EXTERNAL_HTTP_TIMEOUT_MS=25000
 HOST={{getenv "HOST"}}
 IMAGE_MAKER_URL=https://{{getenv "IMAGE_MAKER_URL"}}
