auth: Create admin account on first run
If the container is started with the following ENV vars set;
- SUPERUSER_EMAIL
- SUPERUSER_PASSWORD

then on startup, it will try and create the admin user with these values.

Change-type: patch
Signed-off-by: Rich Bayliss <rich@balena.io>

--- a/config/confd_env_backend/templates/env.tmpl
+++ b/config/confd_env_backend/templates/env.tmpl
@@ -35,6 +35,8 @@ REDIS_PORT={{getenv "REDIS_PORT"}}
 REGISTRY2_HOST={{getenv "REGISTRY2_HOST"}}
 REGISTRY_HOST={{getenv "REGISTRY_HOST"}}
 SENTRY_DSN={{getenv "SENTRY_DSN"}}
+SUPERUSER_EMAIL={{getenv "SUPERUSER_EMAIL"}}
+SUPERUSER_PASSWORD={{getenv "SUPERUSER_PASSWORD"}}
 TOKEN_AUTH_BUILDER_TOKEN='{{getenv "TOKEN_AUTH_BUILDER_TOKEN"}}'
 TOKEN_AUTH_CERT_ISSUER='{{getenv "TOKEN_AUTH_CERT_ISSUER"}}'
 TOKEN_AUTH_CERT_KEY='{{getenv "TOKEN_AUTH_CERT_KEY"}}'
