--- a/config/confd_env_backend/templates/env.tmpl
+++ b/config/confd_env_backend/templates/env.tmpl
@@ -14,10 +14,12 @@ DEVICE_CONFIG_SSH_AUTHORIZED_KEYS={{getenv "DEVICE_CONFIG_SSH_AUTHORIZED_KEYS"}}
 EXTERNAL_HTTP_TIMEOUT_MS=25000
 HOST={{getenv "HOST"}}
 IMAGE_MAKER_URL=https://{{getenv "IMAGE_MAKER_URL"}}
+IMAGE_STORAGE_ACCESS_KEY={{getenv "IMAGE_STORAGE_ACCESS_KEY"}}
 IMAGE_STORAGE_BUCKET={{getenv "IMAGE_STORAGE_BUCKET"}}
 IMAGE_STORAGE_ENDPOINT={{getenv "IMAGE_STORAGE_ENDPOINT"}}
 IMAGE_STORAGE_FORCE_PATH_STYLE={{if getenv "IMAGE_STORAGE_FORCE_PATH_STYLE"}}{{getenv "IMAGE_STORAGE_FORCE_PATH_STYLE"}}{{else}}false{{end}}
 IMAGE_STORAGE_PREFIX={{if getenv "IMAGE_STORAGE_PREFIX"}}{{getenv "IMAGE_STORAGE_PREFIX"}}{{else}}images{{end}}
+IMAGE_STORAGE_SECRET_KEY={{getenv "IMAGE_STORAGE_SECRET_KEY"}}
 JSON_WEB_TOKEN_EXPIRY_MINUTES={{getenv "JSON_WEB_TOKEN_EXPIRY_MINUTES"}}
 JSON_WEB_TOKEN_SECRET='{{getenv "JSON_WEB_TOKEN_SECRET"}}'
 MAX_CONNECTIONS=75
