✨: Use GH contracts repo to find device types
Change-type: minor
Signed-off-by: Andreas Fitzek <andreas@balena.io>

--- a/config/confd_env_backend/templates/env.tmpl
+++ b/config/confd_env_backend/templates/env.tmpl
@@ -11,6 +11,10 @@ DEBUG={{if ne (getenv "PRODUCTION_MODE") "true"}}true{{end}}
 DELTA_HOST={{getenv "DELTA_HOST"}}
 DEVICE_CONFIG_OPENVPN_CA={{getenv "DEVICE_CONFIG_OPENVPN_CA"}}
 DEVICE_CONFIG_SSH_AUTHORIZED_KEYS={{getenv "DEVICE_CONFIG_SSH_AUTHORIZED_KEYS"}}
+{{if getenv "DEVICE_TYPE_REPO_OWNER"}}DEVICE_TYPE_REPO_OWNER={{getenv "DEVICE_TYPE_REPO_OWNER"}}{{end}}
+{{if getenv "DEVICE_TYPE_REPO_NAME"}}DEVICE_TYPE_REPO_NAME={{getenv "DEVICE_TYPE_REPO_NAME"}}{{end}}
+{{if getenv "DEVICE_TYPE_REPO_PATH"}}DEVICE_TYPE_REPO_PATH={{getenv "DEVICE_TYPE_REPO_PATH"}}{{end}}
+{{if getenv "DEVICE_TYPE_REPO_REF"}}DEVICE_TYPE_REPO_REF={{getenv "DEVICE_TYPE_REPO_REF"}}{{end}}
 EXTERNAL_HTTP_TIMEOUT_MS=25000
 FILES_HOST={{if getenv "FILES_HOST"}}{{getenv "FILES_HOST"}}{{else}}{{end}}
 HOST={{getenv "HOST"}}
