--- a/config/confd_env_backend/templates/env.tmpl
+++ b/config/confd_env_backend/templates/env.tmpl
@@ -48,4 +48,5 @@ UV_THREADPOOL_SIZE=128
 VPN_HOST={{getenv "VPN_HOST"}}
 VPN_PORT={{getenv "VPN_PORT"}}
 VPN_SERVICE_API_KEY={{getenv "VPN_SERVICE_API_KEY"}}
+{{if getenv "VPN_GUEST_API_KEY"}}VPN_GUEST_API_KEY={{getenv "VPN_GUEST_API_KEY"}}{{end}}
 {{if getenv "AUTH_RESINOS_REGISTRY_CODE"}}AUTH_RESINOS_REGISTRY_CODE={{getenv "AUTH_RESINOS_REGISTRY_CODE"}}{{end}}
