--- a/config/confd_env_backend/templates/env.tmpl
+++ b/config/confd_env_backend/templates/env.tmpl
@@ -12,6 +12,7 @@ DELTA_HOST={{getenv "DELTA_HOST"}}
 DEVICE_CONFIG_OPENVPN_CA={{getenv "DEVICE_CONFIG_OPENVPN_CA"}}
 DEVICE_CONFIG_SSH_AUTHORIZED_KEYS={{getenv "DEVICE_CONFIG_SSH_AUTHORIZED_KEYS"}}
 EXTERNAL_HTTP_TIMEOUT_MS=25000
+FILES_HOST={{if getenv "FILES_HOST"}}{{getenv "FILES_HOST"}}{{else}}{{end}}
 HOST={{getenv "HOST"}}
 IMAGE_MAKER_URL=https://{{getenv "IMAGE_MAKER_URL"}}
 IMAGE_STORAGE_ACCESS_KEY={{getenv "IMAGE_STORAGE_ACCESS_KEY"}}
