add missing VPN_CONNECT_PROXY_PORT to confd env backend
Change-type: minor
Signed-off-by: ab77 <anton@balena.io>

--- a/config/confd_env_backend/templates/env.tmpl
+++ b/config/confd_env_backend/templates/env.tmpl
@@ -49,5 +49,6 @@ UV_THREADPOOL_SIZE=128
 VPN_HOST={{getenv "VPN_HOST"}}
 VPN_PORT={{getenv "VPN_PORT"}}
 VPN_SERVICE_API_KEY={{getenv "VPN_SERVICE_API_KEY"}}
+{{if getenv "VPN_CONNECT_PROXY_PORT"}}VPN_CONNECT_PROXY_PORT={{getenv "VPN_CONNECT_PROXY_PORT"}}{{end}}
 {{if getenv "VPN_GUEST_API_KEY"}}VPN_GUEST_API_KEY={{getenv "VPN_GUEST_API_KEY"}}{{end}}
 {{if getenv "AUTH_RESINOS_REGISTRY_CODE"}}AUTH_RESINOS_REGISTRY_CODE={{getenv "AUTH_RESINOS_REGISTRY_CODE"}}{{end}}
