Support setting pg statement/query timeouts, defaulting to 60s/61s
Change-type: patch

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -10,6 +10,8 @@ DATABASE_URL=postgres://{{getenv "DB_USER"}}:{{getenv "DB_PASSWORD"}}@{{getenv "
 DB_HOST={{getenv "DB_HOST"}}
 DB_PASSWORD={{getenv "DB_PASSWORD"}}
 DB_POOL_SIZE=60
+{{if getenv "DB_STATEMENT_TIMEOUT"}}DB_STATEMENT_TIMEOUT={{getenv "DB_STATEMENT_TIMEOUT"}}{{end}}
+{{if getenv "DB_QUERY_TIMEOUT"}}DB_QUERY_TIMEOUT={{getenv "DB_QUERY_TIMEOUT"}}{{end}}
 DB_PORT={{getenv "DB_PORT"}}
 DB_USER={{getenv "DB_USER"}}
 DEBUG={{if ne (getenv "PRODUCTION_MODE") "true"}}true{{end}}
