Added optional environment variable configuration for contact repository branch
Change-type: minor
Signed-off-by: Micah Halter <micah@balena.io>

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -3,8 +3,10 @@ API_VPN_SERVICE_API_KEY={{getenv "API_VPN_SERVICE_API_KEY"}}
 COOKIE_SESSION_SECRET={{getenv "COOKIE_SESSION_SECRET"}}
 {{if getenv "CONTRACTS_PUBLIC_REPO_OWNER"}}CONTRACTS_PUBLIC_REPO_OWNER={{getenv "CONTRACTS_PUBLIC_REPO_OWNER"}}{{end}}
 {{if getenv "CONTRACTS_PUBLIC_REPO_NAME"}}CONTRACTS_PUBLIC_REPO_NAME={{getenv "CONTRACTS_PUBLIC_REPO_NAME"}}{{end}}
+{{if getenv "CONTRACTS_PUBLIC_REPO_BRANCH"}}CONTRACTS_PUBLIC_REPO_BRANCH={{getenv "CONTRACTS_PUBLIC_REPO_BRANCH"}}{{end}}
 {{if getenv "CONTRACTS_PRIVATE_REPO_OWNER"}}CONTRACTS_PRIVATE_REPO_OWNER={{getenv "CONTRACTS_PRIVATE_REPO_OWNER"}}{{end}}
 {{if getenv "CONTRACTS_PRIVATE_REPO_NAME"}}CONTRACTS_PRIVATE_REPO_NAME={{getenv "CONTRACTS_PRIVATE_REPO_NAME"}}{{end}}
+{{if getenv "CONTRACTS_PRIVATE_REPO_BRANCH"}}CONTRACTS_PRIVATE_REPO_BRANCH"CONTRACTS_PRIVATE_REPO_BRANCH"}}{{end}}
 {{if getenv "CONTRACTS_PRIVATE_REPO_TOKEN"}}CONTRACTS_PRIVATE_REPO_TOKEN={{getenv "CONTRACTS_PRIVATE_REPO_TOKEN"}}{{end}}
 DATABASE_URL=postgres://{{getenv "DB_USER"}}:{{getenv "DB_PASSWORD"}}@{{getenv "DB_HOST"}}:{{getenv "DB_PORT"}}/resin
 DB_HOST={{getenv "DB_HOST"}}
