Remove BALENA_|RESIN_ prefixes
Change-type: minor

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -34,7 +34,7 @@ JSON_WEB_TOKEN_SECRET='{{getenv "JSON_WEB_TOKEN_SECRET"}}'
 MAX_CONNECTIONS=75
 MIXPANEL_TOKEN={{getenv "MIXPANEL_TOKEN"}}
 NODE_ENV={{if eq (getenv "PRODUCTION_MODE") "true"}}production{{else}}development{{end}}
-NODE_EXTRA_CA_CERTS={{if getenv "BALENA_ROOT_CA"}}/etc/ssl/certs/balenaRootCA.pem{{end}}
+NODE_EXTRA_CA_CERTS={{if getenv "ROOT_CA"}}/etc/ssl/certs/balenaRootCA.pem{{end}}
 NUM_WORKERS={{if ne (getenv "PRODUCTION_MODE") "true"}}1{{end}}
 PG_SCHEMA=public
 PORT=80
