Add the option for a read-only redis endpoint for reading device logs
Change-type: patch

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -42,6 +42,8 @@ PRODUCTION_MODE={{getenv "PRODUCTION_MODE"}}
 PROFILING_MODE=false
 REDIS_HOST={{getenv "REDIS_HOST"}}
 REDIS_PORT={{getenv "REDIS_PORT"}}
+{{if getenv "REDIS_RO_HOST"}}REDIS_RO_HOST={{getenv "REDIS_RO_HOST"}}{{end}}
+{{if getenv "REDIS_RO_PORT"}}REDIS_RO_PORT={{getenv "REDIS_RO_PORT"}}{{end}}
 REGISTRY2_HOST={{getenv "REGISTRY2_HOST"}}
 SENTRY_DSN={{getenv "SENTRY_DSN"}}
 SUPERUSER_EMAIL={{getenv "SUPERUSER_EMAIL"}}
