--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -44,6 +44,10 @@ REDIS_HOST={{getenv "REDIS_HOST"}}
 REDIS_PORT={{getenv "REDIS_PORT"}}
 {{if getenv "REDIS_RO_HOST"}}REDIS_RO_HOST={{getenv "REDIS_RO_HOST"}}{{end}}
 {{if getenv "REDIS_RO_PORT"}}REDIS_RO_PORT={{getenv "REDIS_RO_PORT"}}{{end}}
+{{if getenv "REDIS_LOGS_HOST"}}REDIS_LOGS_HOST={{getenv "REDIS_LOGS_HOST"}}{{end}}
+{{if getenv "REDIS_LOGS_PORT"}}REDIS_LOGS_PORT={{getenv "REDIS_LOGS_PORT"}}{{end}}
+{{if getenv "REDIS_LOGS_RO_HOST"}}REDIS_LOGS_RO_HOST={{getenv "REDIS_LOGS_RO_HOST"}}{{end}}
+{{if getenv "REDIS_LOGS_RO_PORT"}}REDIS_LOGS_RO_PORT={{getenv "REDIS_LOGS_RO_PORT"}}{{end}}
 REGISTRY2_HOST={{getenv "REGISTRY2_HOST"}}
 SENTRY_DSN={{getenv "SENTRY_DSN"}}
 SUPERUSER_EMAIL={{getenv "SUPERUSER_EMAIL"}}
