Added Loki environment variables to confd
Change-type: minor

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -48,6 +48,9 @@ REDIS_PORT={{getenv "REDIS_PORT"}}
 {{if getenv "REDIS_LOGS_PORT"}}REDIS_LOGS_PORT={{getenv "REDIS_LOGS_PORT"}}{{end}}
 {{if getenv "REDIS_LOGS_RO_HOST"}}REDIS_LOGS_RO_HOST={{getenv "REDIS_LOGS_RO_HOST"}}{{end}}
 {{if getenv "REDIS_LOGS_RO_PORT"}}REDIS_LOGS_RO_PORT={{getenv "REDIS_LOGS_RO_PORT"}}{{end}}
+{{if getenv "LOKI_HOST"}}LOKI_HOST={{getenv "LOKI_HOST"}}{{end}}
+{{if getenv "LOKI_PORT"}}LOKI_PORT={{getenv "LOKI_PORT"}}{{end}}
+{{if getenv "LOKI_WRITE_PCT"}}LOKI_WRITE_PCT={{getenv "LOKI_WRITE_PCT"}}{{end}}
 REGISTRY2_HOST={{getenv "REGISTRY2_HOST"}}
 SENTRY_DSN={{getenv "SENTRY_DSN"}}
 SUPERUSER_EMAIL={{getenv "SUPERUSER_EMAIL"}}
