Add support for using a redis cluster for device logs
Change-type: minor

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -40,8 +40,10 @@ PG_SCHEMA=public
 PORT=80
 PRODUCTION_MODE={{getenv "PRODUCTION_MODE"}}
 PROFILING_MODE=false
+REDIS_IS_CLUSTER={{getenv "REDIS_IS_CLUSTER"}}
 REDIS_HOST={{getenv "REDIS_HOST"}}
 {{if getenv "REDIS_RO_HOST"}}REDIS_RO_HOST={{getenv "REDIS_RO_HOST"}}{{end}}
+{{if getenv "REDIS_LOGS_IS_CLUSTER"}}REDIS_LOGS_IS_CLUSTER={{getenv "REDIS_LOGS_IS_CLUSTER"}}{{end}}
 {{if getenv "REDIS_LOGS_HOST"}}REDIS_LOGS_HOST={{getenv "REDIS_LOGS_HOST"}}{{end}}
 {{if getenv "REDIS_LOGS_RO_HOST"}}REDIS_LOGS_RO_HOST={{getenv "REDIS_LOGS_RO_HOST"}}{{end}}
 {{if getenv "LOKI_HOST"}}LOKI_HOST={{getenv "LOKI_HOST"}}{{end}}
