Allow configuring some log storage settings
Change-type: patch

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -49,6 +49,9 @@ REDIS_HOST={{getenv "REDIS_HOST"}}
 {{if getenv "LOKI_HOST"}}LOKI_HOST={{getenv "LOKI_HOST"}}{{end}}
 {{if getenv "LOKI_PORT"}}LOKI_PORT={{getenv "LOKI_PORT"}}{{end}}
 {{if getenv "LOKI_WRITE_PCT"}}LOKI_WRITE_PCT={{getenv "LOKI_WRITE_PCT"}}{{end}}
+{{if getenv "LOGS_STREAM_FLUSH_INTERVAL"}}LOGS_STREAM_FLUSH_INTERVAL={{getenv "LOGS_STREAM_FLUSH_INTERVAL"}}{{end}}
+{{if getenv "LOGS_BACKEND_UNAVAILABLE_FLUSH_INTERVAL"}}LOGS_BACKEND_UNAVAILABLE_FLUSH_INTERVAL={{getenv "LOGS_BACKEND_UNAVAILABLE_FLUSH_INTERVAL"}}{{end}}
+{{if getenv "LOGS_WRITE_BUFFER_LIMIT"}}LOGS_WRITE_BUFFER_LIMIT={{getenv "LOGS_WRITE_BUFFER_LIMIT"}}{{end}}
 REGISTRY2_HOST={{getenv "REGISTRY2_HOST"}}
 SENTRY_DSN={{getenv "SENTRY_DSN"}}
 SUPERUSER_EMAIL={{getenv "SUPERUSER_EMAIL"}}
