--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -46,6 +46,7 @@ REDIS_HOST={{getenv "REDIS_HOST"}}
 {{if getenv "REDIS_LOGS_IS_CLUSTER"}}REDIS_LOGS_IS_CLUSTER={{getenv "REDIS_LOGS_IS_CLUSTER"}}{{end}}
 {{if getenv "REDIS_LOGS_HOST"}}REDIS_LOGS_HOST={{getenv "REDIS_LOGS_HOST"}}{{end}}
 {{if getenv "REDIS_LOGS_RO_HOST"}}REDIS_LOGS_RO_HOST={{getenv "REDIS_LOGS_RO_HOST"}}{{end}}
+{{if getenv "REDIS_LOGS_SHARDED_PUBSUB"}}REDIS_LOGS_SHARDED_PUBSUB={{getenv "REDIS_LOGS_SHARDED_PUBSUB"}}{{end}}
 {{if getenv "LOKI_HOST"}}LOKI_HOST={{getenv "LOKI_HOST"}}{{end}}
 {{if getenv "LOKI_PORT"}}LOKI_PORT={{getenv "LOKI_PORT"}}{{end}}
 {{if getenv "LOKI_WRITE_PCT"}}LOKI_WRITE_PCT={{getenv "LOKI_WRITE_PCT"}}{{end}}
