Add optional LOGS_HOST env var for log-stream subdomain
Depends-on: https://github.com/balena-io/environment-production/pull/1102
Change-type: minor
Signed-off-by: Christina Ying Wang <christina@balena.io>

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -31,6 +31,7 @@ IMAGE_STORAGE_PREFIX={{if getenv "IMAGE_STORAGE_PREFIX"}}{{getenv "IMAGE_STORAGE
 IMAGE_STORAGE_SECRET_KEY={{getenv "IMAGE_STORAGE_SECRET_KEY"}}
 JSON_WEB_TOKEN_EXPIRY_MINUTES={{getenv "JSON_WEB_TOKEN_EXPIRY_MINUTES"}}
 JSON_WEB_TOKEN_SECRET='{{getenv "JSON_WEB_TOKEN_SECRET"}}'
+{{if getenv "LOGS_HOST"}}LOGS_HOST={{getenv "LOGS_HOST"}}{{end}}
 MAX_CONNECTIONS=75
 MIXPANEL_TOKEN={{getenv "MIXPANEL_TOKEN"}}
 NODE_ENV={{if eq (getenv "PRODUCTION_MODE") "true"}}production{{else}}development{{end}}
