Add support for Redis auth
Resolves: #1397
Change-type: minor

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -44,10 +44,14 @@ PRODUCTION_MODE={{getenv "PRODUCTION_MODE"}}
 PROFILING_MODE=false
 REDIS_IS_CLUSTER={{getenv "REDIS_IS_CLUSTER"}}
 REDIS_HOST={{getenv "REDIS_HOST"}}
+REDIS_AUTH={{getenv "REDIS_AUTH"}}
 {{if getenv "REDIS_RO_HOST"}}REDIS_RO_HOST={{getenv "REDIS_RO_HOST"}}{{end}}
+{{if getenv "REDIS_RO_AUTH"}}REDIS_RO_AUTH={{getenv "REDIS_RO_AUTH"}}{{end}}
 {{if getenv "REDIS_LOGS_IS_CLUSTER"}}REDIS_LOGS_IS_CLUSTER={{getenv "REDIS_LOGS_IS_CLUSTER"}}{{end}}
 {{if getenv "REDIS_LOGS_HOST"}}REDIS_LOGS_HOST={{getenv "REDIS_LOGS_HOST"}}{{end}}
+{{if getenv "REDIS_LOGS_AUTH"}}REDIS_LOGS_AUTH={{getenv "REDIS_LOGS_AUTH"}}{{end}}
 {{if getenv "REDIS_LOGS_RO_HOST"}}REDIS_LOGS_RO_HOST={{getenv "REDIS_LOGS_RO_HOST"}}{{end}}
+{{if getenv "REDIS_LOGS_RO_AUTH"}}REDIS_LOGS_RO_AUTH={{getenv "REDIS_LOGS_RO_AUTH"}}{{end}}
 {{if getenv "REDIS_LOGS_SHARDED_PUBSUB"}}REDIS_LOGS_SHARDED_PUBSUB={{getenv "REDIS_LOGS_SHARDED_PUBSUB"}}{{end}}
 {{if getenv "LOKI_HOST"}}LOKI_HOST={{getenv "LOKI_HOST"}}{{end}}
 {{if getenv "LOKI_PORT"}}LOKI_PORT={{getenv "LOKI_PORT"}}{{end}}
