confd: Mark REDIS_AUTH as optional
Change-type: patch

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -44,7 +44,7 @@ PRODUCTION_MODE={{getenv "PRODUCTION_MODE"}}
 PROFILING_MODE=false
 REDIS_IS_CLUSTER={{getenv "REDIS_IS_CLUSTER"}}
 REDIS_HOST={{getenv "REDIS_HOST"}}
-REDIS_AUTH={{getenv "REDIS_AUTH"}}
+{{if getenv "REDIS_AUTH"}}REDIS_AUTH={{getenv "REDIS_AUTH"}}{{end}}
 {{if getenv "REDIS_RO_HOST"}}REDIS_RO_HOST={{getenv "REDIS_RO_HOST"}}{{end}}
 {{if getenv "REDIS_RO_AUTH"}}REDIS_RO_AUTH={{getenv "REDIS_RO_AUTH"}}{{end}}
 {{if getenv "REDIS_LOGS_IS_CLUSTER"}}REDIS_LOGS_IS_CLUSTER={{getenv "REDIS_LOGS_IS_CLUSTER"}}{{end}}
