push optional OpenVPN UDP host to clients
Co-authored-by: Thodoris Greasidis <thgreasi@gmail.com>

change-type: minor

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -75,6 +75,7 @@ TOKEN_AUTH_JWT_ALGO='{{getenv "TOKEN_AUTH_JWT_ALGO"}}'
 TRANSACTION_TIMEOUT_MS=30000
 UV_THREADPOOL_SIZE=128
 VPN_HOST={{getenv "VPN_HOST"}}
+VPN_UDP_HOST={{getenv "VPN_UDP_HOST"}}
 VPN_PORT={{getenv "VPN_PORT"}}
 VPN_SERVICE_API_KEY={{getenv "VPN_SERVICE_API_KEY"}}
 {{if getenv "VPN_CONNECT_PROXY_PORT"}}VPN_CONNECT_PROXY_PORT={{getenv "VPN_CONNECT_PROXY_PORT"}}{{end}}
