device-logs/redis: Add the option to disable compression
Change-type: minor

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -48,6 +48,7 @@ REDIS_HOST={{getenv "REDIS_HOST"}}
 REDIS_AUTH={{getenv "REDIS_AUTH"}}
 {{if getenv "REDIS_RO_HOST"}}REDIS_RO_HOST={{getenv "REDIS_RO_HOST"}}{{end}}
 {{if getenv "REDIS_RO_AUTH"}}REDIS_RO_AUTH={{getenv "REDIS_RO_AUTH"}}{{end}}
+REDIS_LOGS_COMPRESSION_ENABLED={{getenv "REDIS_LOGS_COMPRESSION_ENABLED"}}
 {{if getenv "REDIS_LOGS_IS_CLUSTER"}}REDIS_LOGS_IS_CLUSTER={{getenv "REDIS_LOGS_IS_CLUSTER"}}{{end}}
 {{if getenv "REDIS_LOGS_HOST"}}REDIS_LOGS_HOST={{getenv "REDIS_LOGS_HOST"}}{{end}}
 {{if getenv "REDIS_LOGS_AUTH"}}REDIS_LOGS_AUTH={{getenv "REDIS_LOGS_AUTH"}}{{end}}
