Allow configuring HIDE_UNVERSIONED_ENDPOINT via env vars
change-type: minor

--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -91,3 +91,4 @@ VPN_SERVICE_API_KEY={{getenv "VPN_SERVICE_API_KEY"}}
 {{if getenv "WEBRESOURCES_CLOUDFRONT_PUBLICKEY"}}WEBRESOURCES_CLOUDFRONT_PUBLICKEY={{getenv "WEBRESOURCES_CLOUDFRONT_PUBLICKEY"}}{{end}}
 {{if getenv "WEBRESOURCES_CLOUDFRONT_HOST"}}WEBRESOURCES_CLOUDFRONT_HOST={{getenv "WEBRESOURCES_CLOUDFRONT_HOST"}}{{end}}
 WEBRESOURCES_CLOUDFRONT_PRIVATEKEY_PATH=/etc/ssl/private/cloudfront-pk.pem
+{{if getenv "HIDE_UNVERSIONED_ENDPOINT"}}HIDE_UNVERSIONED_ENDPOINT={{getenv "HIDE_UNVERSIONED_ENDPOINT"}}{{end}}
