--- a/config/confd/templates/env.tmpl
+++ b/config/confd/templates/env.tmpl
@@ -33,6 +33,7 @@ IMAGE_STORAGE_PREFIX={{if getenv "IMAGE_STORAGE_PREFIX"}}{{getenv "IMAGE_STORAGE
 IMAGE_STORAGE_SECRET_KEY={{getenv "IMAGE_STORAGE_SECRET_KEY"}}
 JSON_WEB_TOKEN_EXPIRY_MINUTES={{getenv "JSON_WEB_TOKEN_EXPIRY_MINUTES"}}
 JSON_WEB_TOKEN_SECRET='{{getenv "JSON_WEB_TOKEN_SECRET"}}'
+JSON_WEB_TOKEN_LIMIT_EXPIRY_REFRESH='{{getenv "JSON_WEB_TOKEN_LIMIT_EXPIRY_REFRESH"}}'
 {{if getenv "LOGS_HOST"}}LOGS_HOST={{getenv "LOGS_HOST"}}{{end}}
 MAX_CONNECTIONS=75
 MIXPANEL_TOKEN={{getenv "MIXPANEL_TOKEN"}}
